--- a/src/Resource/logging.properties
+++ b/src/Resource/logging.properties
@@ -3,7 +3,7 @@ handlers = java.util.logging.FileHandler
 java.util.logging.FileHandler.level = INFO
 
 # FileHandler specific props
-java.util.logging.FileHandler.pattern = ./Logs/login_activity.log
+java.util.logging.FileHandler.pattern = ./login_activity.log
 java.util.logging.FileHandler.limit = 500000
 java.util.logging.FileHandler.count = 1
 java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
